# mkkl-dl

./: .env  .gitignore  Cargo.toml  README.md  balls.js  test.htm  test.html
src/: chapmanganato.rs  compress.rs  flags.rs  globals.rs  handlers.rs  help.txt  macros.rs  main.rs  mangakakalot.rs  util.rs  utils.rs  zipdir.rs
src/commands/: compress.rs  download.rs  list.rs  mod.rs  test.rs
src/downloaders/: chapmanganato.rs  downloader.rs  downloaders.rs  handlers.rs  lib.rs  mangakakalot.rs  mod.rs
src/handlers/: chapter.rs  flags.rs  list.rs  range.rs
src/utils/: color.rs  compress.rs  list.rs  mod.rs  prompt.rs  util.rs  zip.rs  zipdir.rs
